# now_de_young

./: README.md
client/: package-lock.json  package.json
client/src/: App.tsx
front/: package-lock.json  package.json  tsconfig.json
server/: dev.db
server/go/: go.mod  go.sum  main.go
server/go/controller/: todos_controller.go
server/go/database/: database.go
server/go/model/: todo.go
server/kotlin/: build.gradle.kts  gradle.properties
server/kotlin/src/main/kotlin/com/example/: Application.kt
server/kotlin/src/main/kotlin/com/example/plugins/: Databases.kt  HTTP.kt  TodosSchema.kt
server/python/: pyproject.toml
server/python/server/: database.py  main.py  models.py
server/rust/: Cargo.toml
server/rust/src/: main.rs
server/rust/src/entity/: todo.rs
server/rust/src/handlers/: todos.rs
server/swift/: Package.resolved  Package.swift  docker-compose.yml
server/swift/Sources/App/: configure.swift
server/swift/Sources/App/Models/: Todo.swift
server/swift/Sources/Run/: main.swift
server/typescript/: package-lock.json  package.json  tsconfig.json
server/typescript/prisma/: schema.prisma
server/typescript/src/: app.ts  index.ts
